<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:background="@color/background_green" tools:context=".MainActivity">

    <TextView android:text="@string/nanodegree_title" android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textView"
        android:layout_alignParentTop="true"
        android:textSize="20dp"
        android:textColor="@color/green_900"
        android:layout_centerHorizontal="true" />

    <Button
        style="@style/Green700Button"
        android:text="@string/spotify_streamer"
        android:id="@+id/btnSpotify"
        android:layout_below="@+id/textView"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="40dp"
        android:onClick="onClickSpotify"/>

    <Button
        style="@style/Green700Button"
        android:text="@string/super_duo"
        android:id="@+id/btnSuperDuo"
        android:layout_marginTop="20dp"
        android:layout_below="@+id/btnSpotify"
        android:layout_centerHorizontal="true"
        android:onClick="onClickSuperDuo"/>

    <Button
        style="@style/Green700Button"
        android:text="@string/build_it"
        android:id="@+id/btnBuildIt"
        android:layout_below="@+id/btnSuperDuo"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:onClick="onClickBuildIt"/>

    <Button
        style="@style/Green700Button"
        android:text="@string/xyz_reader"
        android:id="@+id/btnXYZ"
        android:layout_below="@+id/btnBuildIt"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:onClick="onClickXYZReader"/>

    <Button
        style="@style/Green900Button"
        android:text="@string/capstone"
        android:id="@+id/btnCapstone"
        android:layout_below="@+id/btnXYZ"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:onClick="onClickCapstone"/>

</RelativeLayout>
